--- a/DynamicTypeTest/DynamicTypeTest/DynamicTypeTest.csproj
+++ b/DynamicTypeTest/DynamicTypeTest/DynamicTypeTest.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddPropertyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddPropertyForm.Designer.cs">
+      <DependentUpon>AddPropertyForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DynamicTypeDescriptor.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -53,6 +59,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyDynamicClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -78,6 +85,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="MyDynamicClassProperties.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="properties.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
